code25_all/scala/7935315.txt
<condition> ? <if true> : <if false>
/
:
:
case class Ternary[T](val o: Option[T]) {
  def / (f: => T) = o getOrElse f
}

implicit def boolToTernary(cond: Boolean) = new {
  def ? [T](f: => T) = if(cond) Ternary(Some(f)) 
                        else    Ternary[T](None)
}

scala> (1 > 2) ? "hi" / "abc"
res9: java.lang.String = abc

scala> (1 > 2) ? 5 / 6.0
<console>:33: error: type mismatch;
 found   : Double(6.0)
 required: Int
       (1 > 2) ? 5 / 6.0
                     ^

if (1 > 2) 5 else 6.0
